# git-som

./: .gitignore  CMakeLists.txt  README.md  input.txt  main2.cpp
